@@ -5,7 +5,9 @@ version 1.3.0
   the report)
 - add facility for nesting loops and fix some loop bugs
 - fix some bugs in LaTeX equation display
+- add support for Latin 2 characters in gnuplot graphs
 - add support for compacting daily data to weekly or monthly
+- add support for daily data with a 6-day week
 - fix for SUR systems with differing numbers of regressors
   across equations (thanks to Jack Lucchetti)
 - add stack() function to genr command: creates a stacked
@@ -15,12 +17,13 @@ version 1.3.0
   manipulate the observation marker strings -- details in
   panel.pdf
 - add "vif" command to calculate Variance Inflation Factors
-  for independent variables in a regression
+  for independent variables in a regression; also available
+  in the model window under Tests/collinearity
 - switch to St Louis Fed database as gretl "sample" database
   (the BCIH database is getting too out-of-date)
 - add the Anscombe Quartet to the gretl data files
 - on Windows, make EMF graphs respect the user's choice of
-  plotting colors (required gnuplot patch)
+  plotting colors (required a modification to gnuplot)
 - various minor gui fixes and enhancements
 - update Windows version to gtk 2.4.9
 
